intel/bench_ready/Paeth/log.txt
bench_ready/Paeth/Paeth.cpp:32:22: error: use of undeclared identifier 'abs'; did you mean 'fabs'?
            test_1 = abs(pas) <= abs(pbs);
                     ^~~
                     fabs
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:181:14: note: 'fabs' declared here
__MATHCALLX (fabs,, (_Mdouble_ __x), (__const__));
             ^
bench_ready/Paeth/Paeth.cpp:32:22: warning: using floating point absolute value function 'fabs' when argument is of integer type [-Wabsolute-value]
            test_1 = abs(pas) <= abs(pbs);
                     ^
bench_ready/Paeth/Paeth.cpp:32:22: note: use function 'std::abs' instead
            test_1 = abs(pas) <= abs(pbs);
                     ^~~
                     std::abs
bench_ready/Paeth/Paeth.cpp:32:22: note: include the header <cstdlib> or explicitly provide a declaration for 'std::abs'
bench_ready/Paeth/Paeth.cpp:32:34: error: use of undeclared identifier 'abs'; did you mean 'fabs'?
            test_1 = abs(pas) <= abs(pbs);
                                 ^~~
                                 fabs
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:181:14: note: 'fabs' declared here
__MATHCALLX (fabs,, (_Mdouble_ __x), (__const__));
             ^
bench_ready/Paeth/Paeth.cpp:32:34: warning: using floating point absolute value function 'fabs' when argument is of integer type [-Wabsolute-value]
            test_1 = abs(pas) <= abs(pbs);
                                 ^
bench_ready/Paeth/Paeth.cpp:32:34: note: use function 'std::abs' instead
            test_1 = abs(pas) <= abs(pbs);
                                 ^~~
                                 std::abs
bench_ready/Paeth/Paeth.cpp:32:34: note: include the header <cstdlib> or explicitly provide a declaration for 'std::abs'
bench_ready/Paeth/Paeth.cpp:33:22: error: use of undeclared identifier 'abs'; did you mean 'fabs'?
            test_2 = abs(pas) <= abs(pcs);
                     ^~~
                     fabs
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:181:14: note: 'fabs' declared here
__MATHCALLX (fabs,, (_Mdouble_ __x), (__const__));
             ^
bench_ready/Paeth/Paeth.cpp:33:22: warning: using floating point absolute value function 'fabs' when argument is of integer type [-Wabsolute-value]
            test_2 = abs(pas) <= abs(pcs);
                     ^
bench_ready/Paeth/Paeth.cpp:33:22: note: use function 'std::abs' instead
            test_2 = abs(pas) <= abs(pcs);
                     ^~~
                     std::abs
bench_ready/Paeth/Paeth.cpp:33:22: note: include the header <cstdlib> or explicitly provide a declaration for 'std::abs'
bench_ready/Paeth/Paeth.cpp:33:34: error: use of undeclared identifier 'abs'; did you mean 'fabs'?
            test_2 = abs(pas) <= abs(pcs);
                                 ^~~
                                 fabs
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:181:14: note: 'fabs' declared here
__MATHCALLX (fabs,, (_Mdouble_ __x), (__const__));
             ^
bench_ready/Paeth/Paeth.cpp:33:34: warning: using floating point absolute value function 'fabs' when argument is of integer type [-Wabsolute-value]
            test_2 = abs(pas) <= abs(pcs);
                                 ^
bench_ready/Paeth/Paeth.cpp:33:34: note: use function 'std::abs' instead
            test_2 = abs(pas) <= abs(pcs);
                                 ^~~
                                 std::abs
bench_ready/Paeth/Paeth.cpp:33:34: note: include the header <cstdlib> or explicitly provide a declaration for 'std::abs'
bench_ready/Paeth/Paeth.cpp:34:22: error: use of undeclared identifier 'abs'; did you mean 'fabs'?
            test_4 = abs(pbs) <= abs(pcs);
                     ^~~
                     fabs
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:181:14: note: 'fabs' declared here
__MATHCALLX (fabs,, (_Mdouble_ __x), (__const__));
             ^
bench_ready/Paeth/Paeth.cpp:34:22: warning: using floating point absolute value function 'fabs' when argument is of integer type [-Wabsolute-value]
            test_4 = abs(pbs) <= abs(pcs);
                     ^
bench_ready/Paeth/Paeth.cpp:34:22: note: use function 'std::abs' instead
            test_4 = abs(pbs) <= abs(pcs);
                     ^~~
                     std::abs
bench_ready/Paeth/Paeth.cpp:34:22: note: include the header <cstdlib> or explicitly provide a declaration for 'std::abs'
bench_ready/Paeth/Paeth.cpp:34:34: error: use of undeclared identifier 'abs'; did you mean 'fabs'?
            test_4 = abs(pbs) <= abs(pcs);
                                 ^~~
                                 fabs
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:181:14: note: 'fabs' declared here
__MATHCALLX (fabs,, (_Mdouble_ __x), (__const__));
             ^
bench_ready/Paeth/Paeth.cpp:34:34: warning: using floating point absolute value function 'fabs' when argument is of integer type [-Wabsolute-value]
            test_4 = abs(pbs) <= abs(pcs);
                                 ^
bench_ready/Paeth/Paeth.cpp:34:34: note: use function 'std::abs' instead
            test_4 = abs(pbs) <= abs(pcs);
                                 ^~~
                                 std::abs
bench_ready/Paeth/Paeth.cpp:34:34: note: include the header <cstdlib> or explicitly provide a declaration for 'std::abs'
6 warnings and 6 errors generated.
HLS FPGA Parse FAILED.
